SemanticAnalyzer/tests/success/clase_vacia.java
class A {

}

class B extends A {

}

class C {
	static void main()
	{
	}
}
